# agentic-file-search

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  IMPLEMENTATION_PLAN.md  Makefile  README.md  YOUTUBE_DEMO_TESTS.md  pyproject.toml
docker/: docker-compose.yml
presentation/: SCRIPT_PART1_RAG_VS_AGENTIC.md  SCRIPT_PART2_TECHNICAL.md  index.html  technical.html
scripts/: generate_large_docs.py  generate_test_docs.py
src/fs_explorer/: __init__.py  agent.py  embeddings.py  exploration_trace.py  fs.py  index_config.py  main.py  models.py  server.py  ui.html  workflow.py
src/fs_explorer/indexing/: __init__.py  chunker.py  metadata.py  pipeline.py  schema.py
src/fs_explorer/search/: __init__.py  filters.py  query.py  ranker.py  semantic.py
src/fs_explorer/storage/: __init__.py  base.py  duckdb.py
tests/: conftest.py  test_agent.py  test_cli_indexing.py  test_e2e.py  test_embeddings.py  test_exploration_trace.py  test_fs.py  test_indexing.py  test_models.py  test_search.py  test_server_search.py
