[build-system]
requires = ["uv_build>=0.9.10,<0.10.0"]
build-backend = "uv_build"

[project]
name = "fs-explorer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-genai>=1.55.0",
    "llama-index-workflows>=2.11.5",
    "typer>=0.20.0",
]

[tool.uv.build-backend]
module-name = "fs_explorer"

[project.scripts]
explore = "fs_explorer.main:app"